--- a/Wednesday_Lesson (1).ipynb
+++ b/Wednesday_Lesson (1).ipynb
@@ -45,13 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 4, 10, 3]\n",
+      "[20, 4, 10, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# var[i], var[i + 1] = var[i + 1], var[i]\n",
     "# sometimes called a swap\n",
-    "\n"
+    "\n",
+    "def swap(alist,x,y,z):\n",
+    "    alist[x], alist[y], alist[z] = alist[z], alist[y], alist[x]\n",
+    "    return alist\n",
+    "\n",
+    "my_list = [20,4,10,3]\n",
+    "print(my_list)\n",
+    "\n",
+    "#swap(my_list,0,2,3)\n",
+    "print(my_list)\n"
    ]
   },
   {
@@ -63,12 +81,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 10, 4, 20]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# not swapping, but rather reversing completely\n",
-    "\n"
+    "\n",
+    "my_list[::-1]"
    ]
   },
   {
@@ -81,12 +111,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 8, 4, 3, 4, 2, 6]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "l_1 = [10, 4, 3, 8, 4, 2, 6]\n",
-    "\n"
+    "\n",
+    "def swap_items(alist,x,y,z):\n",
+    "    alist[x], alist[y], alist[z] = alist[z], alist[x], alist[y]\n",
+    "    return alist\n",
+    "\n",
+    "swap_items(l_1,3,1,2)"
    ]
   },
   {
@@ -105,13 +151,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 8, 4, 3, 4, 2, 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[6, 2, 4, 3, 4, 8, 10]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# alist[left], alist[right] = alist[right], alist[left]\n",
     "# use two pointers to swap, uses while loop\n",
-    "\n"
+    "\n",
+    "def twoPointers(alist):\n",
+    "    #Creation of pointers here:\n",
+    "    left = 0\n",
+    "    right = len(alist) - 1\n",
+    "    while left <= right:\n",
+    "        alist[left], alist[right] = alist[right], alist[left]\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    return alist\n",
+    "\n",
+    "print(l_1)\n",
+    "twoPointers(l_1)\n"
    ]
   },
   {
@@ -127,10 +203,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon\n",
+      "Tues\n",
+      "Wed\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LinkedListNode():\n",
+    "    def __init__(self,value):\n",
+    "        self.value = value\n",
+    "        self.next = None # This is the pointer, which initially points to nothing\n",
+    "        \n",
+    "    def traverseList(self):\n",
+    "        node = self # Start at the head node\n",
+    "        while node != None:\n",
+    "            print(node.value) # Access the node value\n",
+    "            node = node.next # Move to the next link in list\n",
+    "            \n",
+    "# Create Nodes for list\n",
+    "node1 = LinkedListNode(\"Mon\")\n",
+    "node2 = LinkedListNode(\"Tues\")\n",
+    "node3 = LinkedListNode(\"Wed\")\n",
+    "\n",
+    "node1.next = node2 # Mon => Tues\n",
+    "node2.next = node3 # Tues => Wed\n",
+    "\n",
+    "node1.traverseList()      "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,14 +252,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# Stacks and Queues can be created using python lists\n",
     "\n",
     "# Append() and pop() = stack\n",
-    "#Append() and pop(0) = queue"
+    "stack = []\n",
+    "stack.append(\"A\")\n",
+    "stack.append(\"E\")\n",
+    "stack.append(\"I\")\n",
+    "stack.append(\"O\")\n",
+    "stack.append(\"U\")\n",
+    "# [\"A\",\"E\",\"I\",\"O\",\"U\"]\n",
+    "\n",
+    "last_item_of_stack = stack.pop()\n",
+    "print(last_item_of_stack)\n",
+    "\n",
+    "\n",
+    "#Append() and pop(0) = queue\n",
+    "\n",
+    "queue = []\n",
+    "queue.append(10)\n",
+    "queue.append(20)\n",
+    "queue.append(30)\n",
+    "\n",
+    "first_item = queue.pop(0)\n",
+    "print(first_item)"
    ]
   },
   {
@@ -185,11 +321,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[96, 63, 42, 42, 72, 40, 10, 32, 55, 88, 21]\n",
+      "Splitting:  [96, 63, 42, 42, 72, 40, 10, 32, 55, 88, 21]\n",
+      "Splitting:  [96, 63, 42, 42, 72]\n",
+      "Splitting:  [96, 63]\n",
+      "Splitting:  [96]\n",
+      "Merging:  [96]\n",
+      "Splitting:  [63]\n",
+      "Merging:  [63]\n",
+      "Merging:  [63, 96]\n",
+      "Splitting:  [42, 42, 72]\n",
+      "Splitting:  [42]\n",
+      "Merging:  [42]\n",
+      "Splitting:  [42, 72]\n",
+      "Splitting:  [42]\n",
+      "Merging:  [42]\n",
+      "Splitting:  [72]\n",
+      "Merging:  [72]\n",
+      "Merging:  [42, 72]\n",
+      "Merging:  [42, 42, 72]\n",
+      "Merging:  [42, 42, 63, 72, 96]\n",
+      "Splitting:  [40, 10, 32, 55, 88, 21]\n",
+      "Splitting:  [40, 10, 32]\n",
+      "Splitting:  [40]\n",
+      "Merging:  [40]\n",
+      "Splitting:  [10, 32]\n",
+      "Splitting:  [10]\n",
+      "Merging:  [10]\n",
+      "Splitting:  [32]\n",
+      "Merging:  [32]\n",
+      "Merging:  [10, 32]\n",
+      "Merging:  [10, 32, 40]\n",
+      "Splitting:  [55, 88, 21]\n",
+      "Splitting:  [55]\n",
+      "Merging:  [55]\n",
+      "Splitting:  [88, 21]\n",
+      "Splitting:  [88]\n",
+      "Merging:  [88]\n",
+      "Splitting:  [21]\n",
+      "Merging:  [21]\n",
+      "Merging:  [21, 88]\n",
+      "Merging:  [21, 55, 88]\n",
+      "Merging:  [10, 21, 32, 40, 55, 88]\n",
+      "Merging:  [10, 21, 32, 40, 42, 42, 55, 63, 72, 88, 96]\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Split everything into it's own group\n",
     "# Step 2: From left to right merge two groups together\n",
@@ -199,7 +383,50 @@
     "from random import randint\n",
     "# used to generate a random list of 10 numbers from 0 to 100\n",
     "nums = [randint(0, 100) for i in range(11)]\n",
-    "# write merge sort\n"
+    "# write merge sort\n",
+    "\n",
+    "def mergeSort(alist):\n",
+    "    print(\"Splitting: \",alist)\n",
+    "    # Step 1 - Divide the list into eqaul halves\n",
+    "    if len(alist) > 1:\n",
+    "        mid = len(alist)//2\n",
+    "        lefthalf = alist[:mid]\n",
+    "        righthalf = alist[mid:]\n",
+    "        \n",
+    "        mergeSort(lefthalf)\n",
+    "        mergeSort(righthalf)\n",
+    "        \n",
+    "        # Index pointers for out list\n",
+    "        i = 0\n",
+    "        j = 0\n",
+    "        k = 0\n",
+    "        \n",
+    "        # Step 2 - Compare the lefthalf and righthalf\n",
+    "        while i < len(lefthalf) and j < len(righthalf):\n",
+    "            if lefthalf[i] < righthalf[j]:\n",
+    "                alist[k] = lefthalf[i]\n",
+    "                i = i + 1\n",
+    "            else:\n",
+    "                alist[k] = righthalf[j]\n",
+    "                j = j + 1\n",
+    "            k = k + 1\n",
+    "            # Step 3 - check both havles and sort in a one-off situation\n",
+    "        while i < len(lefthalf):\n",
+    "            alist[k] = lefthalf[i]\n",
+    "            i = i + 1\n",
+    "            k = k + 1\n",
+    "        while j < len(righthalf):\n",
+    "            alist[k] = righthalf[j]\n",
+    "            j = j + 1\n",
+    "            k = k + 1\n",
+    "    \n",
+    "    print(\"Merging: \",alist) # Step 4 \n",
+    "\n",
+    "print(nums)    \n",
+    "mergeSort(nums)\n",
+    "        \n",
+    "# Time Complexity: O(nlog(n)) -- Linear Logorithmic\n",
+    "# Space Complexity: O(1) -- Constant Time"
    ]
   },
   {
@@ -219,14 +446,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'is', 'a', 'sentence', '.']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['.', 'sentence', 'a', 'is', 'this']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "words = ['this' , 'is', 'a', 'sentence', '.']\n",
     "\n",
-    "def reverse(aList):\n",
-    "    pass"
+    "def reverse(alist):\n",
+    "    left = 0\n",
+    "    right = len(alist) - 1\n",
+    "    while left <= right:\n",
+    "        alist[left], alist[right] = alist[right], alist[left]\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    return alist\n",
+    "\n",
+    "print(words)\n",
+    "reverse(words)\n",
+    "    \n",
+    "#list_length = len(words)\n",
+    "\n",
+    "#for i in range(list_length//2):\n",
+    "    #words[i], words[ list_length -1 - i] = words[ list_length -1 - i], words[i]\n",
+    "\n",
+    "#print (words)\n",
+    "    "
    ]
   },
   {
@@ -242,12 +504,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'In': 1, 'computing,': 1, 'a': 4, 'hash': 4, 'table': 2, 'map': 2, 'is': 1, 'data': 2, 'structure': 2, 'which': 2, 'implements': 1, 'an': 3, 'associative': 1, 'array': 2, 'abstract': 1, 'type,': 1, 'that': 1, 'can': 2, 'keys': 1, 'to': 2, 'values.': 1, 'A': 1, 'uses': 1, 'function': 1, 'compute': 1, 'index': 1, 'into': 1, 'of': 1, 'buckets': 1, 'or': 1, 'slots': 1, 'from': 1, 'the': 1, 'desired': 1, 'value': 1, 'be': 1, 'found': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "a_text = 'In computing, a hash table hash map is a data structure which implements an associative array abstract data type, a structure that can map keys to values. A hash table uses a hash function to compute an index into an array of buckets or slots from which the desired value can be found'\n",
-    "\n"
+    "\n",
+    "def word_count(str):\n",
+    "    counts = dict()\n",
+    "    words = str.split()\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in counts:\n",
+    "            counts[word] += 1\n",
+    "        else:\n",
+    "            counts[word] = 1\n",
+    "\n",
+    "    return counts\n",
+    "print(word_count('In computing, a hash table hash map is a data structure which implements an associative array abstract data type, a structure that can map keys to values. A hash table uses a hash function to compute an index into an array of buckets or slots from which the desired value can be found'))"
    ]
   },
   {
@@ -260,9 +542,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[60, 87, 51, 73, 63, 6, 78, 29, 77, 13]\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "# used to generate a random list of 10 numbers from 0 to 100\n",
@@ -276,11 +566,31 @@
     "# step 5: swap \n",
     "# step 6: if not, break\n",
     "\n",
-    "\n",
+    "aList = nums\n",
     "\n",
     "def insertionSort(aList):\n",
-    "    pass"
+    "    for i in aList:\n",
+    "        j = aList.index(i)\n",
+    "\n",
+    "    #i is not the first element\n",
+    "    while j>0:\n",
+    "        #not in order\n",
+    "        if aList[j-1] > aList[j]:\n",
+    "            #swap\n",
+    "            aList[j-1],aList[j] = aList[j],aList[j-1]\n",
+    "        else:\n",
+    "            #in order\n",
+    "            break\n",
+    "        j = j-1\n",
+    "print(nums)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
